Fix Recovery Issues
